NXP-33619: introduce PageProviderSpec to simplify PageProviderService API
Introduces a fluent PageProviderSpec POJO and its Builder as a single entry-point

for PageProviderService#getPageProvider, replacing the 9 telescoping overloads.

The legacy overloads remain as deprecated default bridges (since 2025.20,

forRemoval = true) that build a spec and delegate to the new API.